# gor

./: .gitignore  CMakeLists.txt  configure.bat  main.cpp
includes/: CMakeLists.txt  arreat_summit.h  dragons.h  exercises.cpp  exercises.h  pirate_bar.h  zerg_queen.h
